fix text overlap in about-us boxes at >599px media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -832,17 +832,20 @@ div.desc {
 
     #left-box {
         width: 100%;
-        height: 375px;
+        height: 420px;
+        margin-bottom: 50px;
         }
         
         #right-box {
         width: 100%;
-        height: 375px;
+        height: 420px;
+        margin-bottom: 50px;
         }
         
         #centre-box {
         width: 100%;
-        height: 375px;
+        height: 420px;
+        margin-bottom: 50px;
         clear: both;
         }
 
